--- a/.github/workflows/security-specialist.yml
+++ b/.github/workflows/security-specialist.yml
@@ -59,5 +59,5 @@ jobs:
           Gunakan security tools seperti OWASP, GH CLI, git, dan tools standar. Lakukan aksi langsung tanpa output deskripsi.
           PROMPT
           )" \
-            --model iflowcn/qwen3-coder \
+            --model iflowcn/qwen3-coder-plus \
             --share false \
