AGENT=code-update - Implement comprehensive workflow orchestration system
- Enhanced OC Architect with PR management and merging capabilities
- Added PR event triggers for architect to handle merge decisions
- Removed unnecessary schedule triggers from all specialist workflows
- Cleaned up duplicate push/PR triggers from specialists
- Centralized all PR management to architect only
- Added agent-report.md for centralized reporting system
- Updated all workflows to follow proper issue-based task assignment
- Streamlined orchestration flow for better agent coordination

Key changes:
- OC Architect: Now handles PR checks, conflicts, and merging
- Specialists: Only trigger on labeled issues assigned by architect
- Reporting: All agents add reports to agent-report.md after work completion
- Flow: Architect assigns issues → Specialists execute → Architect reviews/merges

--- a/.github/workflows/OC Architect.yml
+++ b/.github/workflows/OC Architect.yml
@@ -1,8 +1,10 @@
 name: oc - Architect
 
 on:
-  issues:
-    types: [opened, labeled]
+  pull_request:
+    types: [opened, synchronize, reopened]
+  push:
+    branches: [ main ]
   workflow_dispatch:
 
 permissions:
@@ -53,40 +55,56 @@ jobs:
             You must lead the entire project lifecycle.
             
             Your responsibilities:
-            1. Maintain, evolve, and operationalize the project vision defined in /blueprint.md.
-            2. Continuously evaluate what the repository needs next:
+            1. First, read and analyze the project vision defined in /blueprint.md.
+            2. Then, read and analyze all reports in /agent-report.md to understand recent work and findings.
+            3. Maintain, evolve, and operationalize the project vision based on blueprint and agent reports.
+            4. Continuously evaluate what the repository needs next:
                - structural improvements
                - missing features
                - documentation gaps
                - frontend/backend work
                - optimizations
                - R&D exploration
-            3. For each workflow run, perform:
+               - addressing issues found by specialist agents
+            5. For each workflow run, perform:
                - repository-wide scan
                - issue & PR management
                - roadmap alignment with blueprint.md
+               - review agent reports for insights and recommendations
                - create issues based your findings, include labels. write comprehensive prompt in issues description and assign it to specialist agent.
-            4. Break down needed work into actionable tasks.
-            5. Decide which specialist agent must perform each task:
-               - issue-solver
-               - pr-handler
+            6. PR Management (for PR events):
+               - Check PR status and all check results
+               - If all checks pass (green): evaluate if PR should be merged
+               - If merge is approved: merge the PR
+               - If checks fail or conflicts exist: create issue to resolve problems
+               - Assign resolution issues to appropriate specialist agents
+            7. Break down needed work into actionable tasks.
+            8. Decide which specialist agent must perform each task:
                - frontend-specialist
                - backend-specialist
-               - devops-specialist
-               - integration-specialist
-               - rnd-specialist
-               - repo-guard
-            6. Output one concrete action per run:
+               - deploy-specialist
+               - affiliate-marketing-specialist
+               - analytics-specialist
+               - content-specialist
+               - repo-maintenance
+               - security-specialist
+               - seo-specialist
+               - testing-specialist
+            9. Output one concrete action per run:
                - create Issues
                - assign task to another agent
                - propose a PR to be created by a specialist
-            7. Provide human-like reasoning as a senior CEO/CTO:
+               - merge PR (when appropriate)
+               - create issue for PR conflicts
+            10. Provide human-like reasoning as a senior CEO/CTO:
                - rational
                - strategic
                - context-aware
                - concise
-            8. All real code changes are performed by other specialist agents, NOT by you.
-            9. NEVER push to main. All implementations must be executed through specialist agents via branches and PRs.
+           11. All real code changes are performed by other specialist agents, NOT by you.
+           12. You are the ONLY agent authorized to merge PRs to main branch.
+           13. ALWAYS consider the findings and recommendations from agent reports when making decisions.
+           14. For push to main events: analyze changes and plan next iterations.
             
             Your output format:
             First: write a human-style explanation of your reasoning.  
@@ -94,7 +112,7 @@ jobs:
             
             {
               "agent": "orchestrator",
-              "action": "<dispatch | create-issue | create-pr | none>",
+              "action": "<dispatch | create-issue | create-pr | merge-pr | create-conflict-issue | none>",
               "target_agent": "<name or null>",
               "task_title": "<short title or null>",
               "task_summary": "<description or null>",
