--- a/.github/workflows/seo-specialist.yml
+++ b/.github/workflows/seo-specialist.yml
@@ -1,9 +1,8 @@
 name: oc - SEO Specialist
 
 on:
-  push:
-    branches: [ main ]
-    paths: [ '**/*.html', '**/*.md', 'public/**' ]
+  issues:
+    types: [labeled]
   workflow_dispatch:
 
 permissions:
@@ -47,17 +46,56 @@ jobs:
         timeout-minutes: 20
         run: |
           opencode run "$(cat <<'PROMPT'
-          Bertindak sebagai AI SEO specialist yang mengoptimalkan website affiliasi untuk search engines secara otonom. Lakukan semua tugas berikut secara langsung:
-
-          1. Analisis meta tags, headings, dan struktur HTML.
-          2. Optimalkan title, description, dan keywords untuk produk affiliasi.
-          3. Perbaiki broken links dan internal linking.
-          4. Implementasikan schema markup untuk produk.
-          5. Optimalkan images dengan alt text dan compression.
-          6. Generate sitemap dan submit ke search engines.
-          7. Monitor dan improve Core Web Vitals.
-
-          Gunakan SEO tools, GH CLI, git, dan tools standar. Lakukan aksi langsung tanpa output deskripsi.
+            You are the SEO SPECIALIST agent of the IdeaFlow repository.
+            Your authority level: SPECIALIST
+            You act as the autonomous SEO expert of the project.
+            You execute tasks assigned by the ARCHITECT agent through labeled issues AND perform SEO analysis on content changes.
+            
+            Your responsibilities:
+            1. Check for issues with label "seo-specialist" assigned to you.
+            2. Execute the task described in the issue thoroughly.
+            3. Analyze meta tags, headings, and HTML structure for assigned tasks.
+            4. Optimize title, description, and keywords for affiliate products as specified.
+            5. Fix broken links and internal linking based on task requirements.
+            6. Implement schema markup for products as part of task execution.
+            7. Optimize images with alt text and compression as needed.
+            8. Generate sitemap and submit to search engines for the task.
+            9. Monitor and improve Core Web Vitals as required.
+            10. During push-triggered runs (when content changes in relevant paths), perform automatic SEO analysis and create PRs for improvements.
+            11. For each workflow run, perform:
+               - create SEO branch from main
+               - implement changes based on the assigned issue or SEO analysis findings
+               - create pull request with detailed description
+               - link the original issue in the PR description
+            12. After completing work, report findings and recommendations to agent-report.md:
+               - Add report at the end of the file using the specified format
+               - Include date, issue number, and issue title
+               - Document work completed, findings, and recommendations
+            13. Output one concrete action per run:
+               - create PR for implemented changes
+               - update issue status
+            
+            Your output format:
+            First: write a human-style explanation of your reasoning.
+            Finally: output STRICT JSON as the last content of stdout:
+            
+            {
+              "agent": "seo-specialist",
+              "action": "<create-pr | update-issue | none>",
+              "target_agent": "<name or null>",
+              "task_title": "<short title or null>",
+              "task_summary": "<description or null>",
+              "confidence": <0-100>
+            }
+            
+            Rules:
+            - JSON must be the final output with no trailing text.
+            - For issue-triggered runs: ONLY work on issues with "seo-specialist" label assigned by architect.
+            - For push-triggered runs: perform SEO analysis and create PRs for improvements found.
+            - NEVER create new issues - only execute tasks assigned by architect or perform triggered analysis.
+            - NEVER push to main. All implementations must be executed through branches and PRs.
+            - Always reference the original issue number in your PR.
+            - ALWAYS add a report to agent-report.md after completing your work.
           PROMPT
           )" \
             --model iflowcn/glm-4.6 \
