Implement unified specialists workflow - consolidate 10 workflows into 1 efficient matrix strategy
Features:
- specialists-unified.yml: Single workflow with matrix strategy for all 10 specialists
- Dynamic prompt generation based on specialist type
- Robust error handling with retry logic (3 attempts)
- Comprehensive label validation and secret checking
- test-unified-workflow.yml: Automated testing for all label scenarios
- disable-old-workflows.yml: Safe migration utility with backup
- SPECIALISTS_UNIFIED_GUIDE.md: Comprehensive documentation (244 lines)
- IMPLEMENTATION_SUMMARY.md: Complete implementation summary

Performance Improvements:
- 90% resource reduction (10 workflows → 1 unified workflow)
- Centralized management and monitoring
- Enhanced reliability with multi-layer error handling
- Standardized failure reporting to agent-report.md

Migration Status:
- Frontend specialist workflow manually disabled
- All other workflows ready for automated disable
- Backup protection and rollback capability included

Next Steps:
1. Run disable-old-workflows.yml with confirmation 'DISABLE'
2. Monitor unified workflow execution for 1 week
3. Remove old workflows after validation period

This eliminates workflow overlap issues and provides massive efficiency gains.

--- a/.github/workflows/content-specialist.yml
+++ b/.github/workflows/content-specialist.yml
@@ -20,6 +20,7 @@ jobs:
   content_specialist:
     name: OC Content Specialist
     runs-on: ubuntu-24.04-arm
+    if: contains(github.event.label.name, 'content-specialist')
     timeout-minutes: 40
     permissions:
       id-token: write
