--- a/.github/workflows/affiliate-marketing-specialist.yml
+++ b/.github/workflows/affiliate-marketing-specialist.yml
@@ -20,6 +20,7 @@ jobs:
   affiliate_specialist:
     name: OC Affiliate Marketing Specialist
     runs-on: ubuntu-24.04-arm
+    if: contains(github.event.label.name, 'affiliate-marketing-specialist')
     timeout-minutes: 40
     permissions:
       id-token: write
