--- a/.github/workflows/analytics-specialist.yml
+++ b/.github/workflows/analytics-specialist.yml
@@ -20,6 +20,7 @@ jobs:
   analytics_specialist:
     name: OC Analytics Specialist
     runs-on: ubuntu-24.04-arm
+    if: contains(github.event.label.name, 'analytics-specialist')
     timeout-minutes: 40
     permissions:
       id-token: write
