--- a/.github/workflows/backend-specialist.yml
+++ b/.github/workflows/backend-specialist.yml
@@ -20,6 +20,7 @@ jobs:
   backend_specialist:
     name: OC Backend Specialist
     runs-on: ubuntu-24.04-arm
+    if: contains(github.event.label.name, 'backend-specialist')
     timeout-minutes: 40
     permissions:
       id-token: write
