--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
   deploy:
     name: OC Deploy
     runs-on: ubuntu-24.04-arm
+    if: contains(github.event.label.name, 'deploy-specialist')
     timeout-minutes: 40
     permissions:
       id-token: write
