--- a/.github/workflows/frontend-specialist.yml
+++ b/.github/workflows/frontend-specialist.yml
@@ -1,4 +1,4 @@
-name: oc - Frontend Specialist
+name: oc - Frontend Specialist [DEPRECATED - Use specialists-unified.yml]
 
 on:
   issues:
@@ -20,6 +20,7 @@ jobs:
   specialist:
     name: OC Frontend Specialist
     runs-on: ubuntu-24.04-arm
+    if: false  # DEPRECATED - Use specialists-unified.yml instead
     timeout-minutes: 40
     permissions:
       id-token: write
