--- a/.github/workflows/security-specialist.yml
+++ b/.github/workflows/security-specialist.yml
@@ -20,6 +20,7 @@ jobs:
   security_specialist:
     name: OC Security Specialist
     runs-on: ubuntu-24.04-arm
+    if: contains(github.event.label.name, 'security-specialist')
     timeout-minutes: 40
     permissions:
       id-token: write
